--- a/PortfolioPage/Project.1.CSS
+++ b/PortfolioPage/Project.1.CSS
@@ -5,13 +5,14 @@
 }
 nav{
     width: 100%;
+    height: 100%;
     margin: 0;
     top: 0;
           }
 .sideLinks ul{ 
     display: inline-block;
     position: fixed;   
-    height: 10vh;
+    height: 15vh;
     width: 100vw;
     list-style-type: none;
     z-index: 1;
@@ -21,6 +22,7 @@ nav{
     top: 0;
         }
 .sideLinks li{
+    height: 5vh;
     float: left;
                 }
 .sideLinks li a{
@@ -28,6 +30,7 @@ nav{
     color: white;
     margin-top: 1vh;
     width: 19vw;
+    height: auto;
     overflow-y: hidden;
     font-size: larger;
     text-align: center;
@@ -90,7 +93,6 @@ p {
 }
 
 .icons{
-    margin-top: 5px;
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
     margin: auto;
@@ -105,6 +107,7 @@ p {
     text-align: center;
 }
 .icons img{
+    margin-top: auto;
     display: grid;
     width: 3vw;
     height: 3vh;
