--- a/PortfolioPage/Project.1.CSS
+++ b/PortfolioPage/Project.1.CSS
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 nav{
     width: 100%;
     height: 100%;
@@ -11,7 +12,9 @@ nav{
           }
 .sideLinks ul{ 
     display: inline-block;
-    position: fixed;   
+    margin-left: 2vw;;
+    position: fixed; 
+    margin-top: 4vh;;  
     height: 15vh;
     width: 100vw;
     list-style-type: none;
@@ -74,7 +77,12 @@ h1 {
     color: #fff;
     margin-top: 30vh;
     }
-
+h2 {
+    color: aliceblue;
+    text-align: center;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
 p {
     font-family: 'Times New Roman', Times, serif;
     color: #fff;
