--- a/PortfolioPage/Project.1.CSS
+++ b/PortfolioPage/Project.1.CSS
@@ -94,11 +94,11 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 150%;
-    height: 150%;
+    width: 200%;
+    height: 200%;
     margin-left: -30vw;
     margin-top: -30vh;
-    background-image: url(./images/an-image-of-space-and-stars-that-will-be-used-for-a-b.jpg); /* Add your rotating background image here */
+    background-image: url(./images/an-image-of-space-and-stars-that-will-be-used-for-a-b.jpg); 
     background-repeat: repeat-y;
     background-size: cover;
     z-index: 1;
